# PyScrum

./: .coverage  .gitignore  CONTRIBUTING.md  Makefile  README.md  Release Sprint_report.csv  Release_Sprint_report.html  example.py  export_reports.py  mkdocs.yml  requirements-dev.txt  setup.cfg  setup.py  tasks_report.csv  tasks_report.html  terminal_command.sh
.github/workflows/: ci.yml  cli_tests.yml  run_examples.yml  tests.yml
docs/: CLIdocs.txt  Pyscrum.txt  index.md
examples/: all_tasks.csv  all_tasks.html  cli_demo.sh  example.py  example_basic.py  example_export.py  example_search.py  export_reports.py  main.py  run_examples.py  sprint_report.csv  sprint_report.html  test.py
pyscrum/: __init__.py  backlog.py  cli.py  database.py  reports.py  sprint.py  task.py
tests/: .coverage  conftest.py  new.py  test_all.py  test_backlog.py  test_baclog.py  test_cli.py  test_report.py  test_reports.py  test_sprint.py  test_task.py
