[metadata]
name = pyscrum
version = 0.1.0
description = A minimalist Scrum management library for Python projects.
author = Dominik Palo
author_email = dominikpalo12@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dospalko/pyscrum
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
exclude =
    tests*

[coverage:run]
branch = True


[options.entry_points]
console_scripts =
    pyscrum = pyscrum.cli:app

